# o4_project

./: CMakeLists.txt  README.md  resources.qrc
assets/: resources.qrc
data/: data.json
include/o4_project/: about_window.h  browse_window.h  container.h  container_model.h  container_window.h  item.h  item_info_window.h  items_window.h  json_utils.h  main_window.h  mode_frame.h  move_window.h  navigation_panel.h  navigation_window.h  search_model.h  search_proxy_model.h  search_window.h  status_bar.h  tutorial_window.h
src/: about_window.cpp  browse_window.cpp  commands.cpp  container.cpp  container_model.cpp  container_window.cpp  item_info_window.cpp  items_window.cpp  main.cpp  main_window.cpp  move_window.cpp  navigation_panel.cpp  navigation_window.cpp  search_model.cpp  search_proxy_model.cpp  search_window.cpp  status_bar.cpp  tutorial_window.cpp
test/: container_model_tests.h  container_tests.h  json_tests.h  test_main.cpp
